--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,17 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		
+		<resources>
+      		<resource>
+        		<directory>${basedir}</directory>
+        		<targetPath>./</targetPath>
+        		<includes>
+          			<include>licence.doc</include>
+        		</includes>
+      		</resource>
+    	</resources>
+    	
 	</build>
 
 	<reporting>
